--- a/UI/html/signup.html
+++ b/UI/html/signup.html
@@ -15,7 +15,7 @@
 <body>
 
   <nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color">
-    <a class="navbar-brand" href="index.html"><em>Hotellisting</em></a>
+    <a class="navbar-brand" href="../index.html"><em>HotelApp</em></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
       aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home
+          <a class="nav-link" href="../index.html">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
