--- a/UI/index.html
+++ b/UI/index.html
@@ -17,7 +17,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link rel="stylesheet" href="../UI/css/simple-sidebar.css">
+  <link rel="stylesheet" href="./css/simple-sidebar.css">
 
 </head>
 
@@ -27,21 +27,21 @@
 
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading"><img src="../src/img/logo.png" alt="" width="40">HotelListing</div>
+      <div class="sidebar-heading"><img src="./img/logo.png" alt="" width="40">HotelApp</div>
       <div class="list-group list-group-flush">
-        <a href="dashbord.html" class="list-group-item list-group-item-action bg-light">Home</a>
+        <a href="index.html" class="list-group-item list-group-item-action bg-light">Home</a>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               <i class="fas fa-user"> Account</i>
             </a>
             <div class="dropdown-menu dropdown-menu-right dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
-              <a class="dropdown-item" href="signup.html">SignUp</a>
-              <a class="dropdown-item" href="login.html">Login</a>
+              <a class="dropdown-item" href="./html/signup.html">SignUp</a>
+              <a class="dropdown-item" href="./html/login.html">Login</a>
             </div>
           </li>
-        <a href="signup.html" class="list-group-item list-group-item-action bg-light">
-            <img src="../UI/img/admin1.ico" alt="admin image" class="photo img-fluid rounded-circle" width="30"> Admin</a>
+        <a href="./html/signup.html" class="list-group-item list-group-item-action bg-light">
+            <img src="./img/admin1.ico" alt="admin image" class="photo img-fluid rounded-circle" width="30"> Admin</a>
         <a href="profile.html" class="list-group-item list-group-item-action bg-light">Profile</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
       </div>
@@ -88,8 +88,8 @@
                     <i class="fas fa-user"> Account</i>
                   </a>
                   <div class="dropdown-menu dropdown-menu-right dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
-                    <a class="dropdown-item" href="signup.html">SignUp</a>
-                    <a class="dropdown-item" href="login.html">Login</a>
+                    <a class="dropdown-item" href="./html/signup.html">SignUp</a>
+                    <a class="dropdown-item" href="./html/login.html">Login</a>
                   </div>
                 </li>
               </ul>
